<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/submit_workout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="start"
            android:id="@+id/workout_time_textview"
            android:text="@string/submit_workout_time"/>
        <EditText
            android:id="@+id/submitted_time_editText"
            android:gravity="start"
            android:layout_weight="1"
            android:inputType="number"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:text="@string/submit_workout_intensity"/>

        <Spinner
            android:id="@+id/workout_intensity_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>